# FASTLIO2_ROS2

./: BUG_TRACKING.md  INCREASE_LOCALIZATION_SCOPE.MD  README.md  REMAP_IMPLEMENTATION.MD  REMAP_PLAN.md  fastlio2_lifecycle_management.md  fastlio2_lifecycle_management_1.md  localization_jump.md
fastlio2/: CMakeLists.txt  package.xml
fastlio2/config/: lio.yaml
fastlio2/src/: lio_node.cpp  utils.cpp
fastlio2/src/map_builder/: commons.h  ieskf.cpp  imu_processor.cpp  imu_processor.h  lidar_processor.cpp  lidar_processor.h  map_builder.cpp  map_builder.h
hba/: CMakeLists.txt  package.xml
hba/config/: hba.yaml
hba/src/: hba_node.cpp
interface/: CMakeLists.txt  package.xml
interface/msg/: LocalizationStatus.msg
interface/srv/: LoadPGOSession.srv  ResetMapping.srv  ResetState.srv
localizer/: CMakeLists.txt  package.xml
localizer/config/: localizer.yaml
localizer/launch/: localizer_launch.py
localizer/rviz/: localizer.rviz
localizer/src/: localizer_node.cpp
localizer/src/localizers/: icp_localizer.cpp  icp_localizer.h
map_updater/: CMakeLists.txt  README.md  package.xml
map_updater/config/: map_updater.yaml
map_updater/launch/: map_updater.launch.py
map_updater/src/: commons.h  map_updater_core.cpp  map_updater_core.hpp  map_updater_node.cpp  map_updater_node.hpp  voxel_hash_map.cpp  voxel_hash_map.hpp
pgo/: CMakeLists.txt  package.xml
pgo/config/: pgo.yaml
pgo/launch/: pgo_launch.py
pgo/src/: pgo_node.cpp
pgo/src/pgos/: simple_pgo.cpp  simple_pgo.h
